--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>The Wheel of Games</title>
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<title>The Wheel of Games</title>
+</head>
 
-	<body>
-		<h1>The Wheel of Games</h1>
-		<canvas width="600" height="600" style=" border:2px solid black; "></canvas>		<!--Spinner box-->
-		<br />
+<body>
+	<h1>The Wheel of Games</h1>
+	<canvas width="600" height="600" style=" border:2px solid black; background: white; "></canvas>		<!--Spinner box-->
+	<br />
 
-		<button id="spinBtn" style ="font-size: 24px; padding: 15px 30px;">	<!--Button-->
-			Spin it!
-		</button>
+	<button id="spinBtn" style="font-size: 24px; padding: 15px 30px;">
+		<!--Spin Button-->
+		Spin it!
+	</button>
 
-		<div id="modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;">
-			
-			<!--Modal popup showing winning game-->
-			<div id="modalContent" style="
+	<button id="newGamesBtn" style="font-size: 24px; padding: 15px 30px;">
+		<!--New Wheel Button-->
+		Generate new games
+	</button>
+
+	<div id="modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;">
+
+		<!--Modal popup showing winning game-->
+		<div id="modalContent" style="
 					 background: #82e0ff;
 					 padding: 20px;
 					 border-radius: 25px;
@@ -31,164 +37,347 @@
 					 left: 60%;
 					 transform: translate(-50%, -50%);
 					 min-width: 200px;">
-				<p id="modalText"></p>
-			</div>
+			<p id="modalText"></p>
 		</div>
+	</div>
 
-		<script>
-			const GAMES =[					//Games list
-			"The WHAT THE FUCK Game",
-			"PISS the game",
-			"Strip Chess",
-			"Crazy sevens",
-			"This game has a really long name to test truncation"
-			];
+	<script>
+		const gamesMaster = [					//Games master list
+			"A Game of Things",
+			"Apples to Apples",
+			"Balderdash",
+			"Comedy Movies Scene it",
+			"Cranium",
+			"Disney Scene it",
+			"Hollywood Fact or Crap",
+			"Say Anything",
+			"Twister",
+			"Risk",
+			"Tapple",
+			"Hanabi 2",
+			"Battleship",
+			"Guess Who",
+			"Stratego",
+			"Battleship Galaxies",
+			"Balderdash 2",
+			"Quick Picks with Ben Wicks",
+			"Outburst",
+			"Cranium Party Playoff",
+			"Sorry",
+			"100 Classic Games",
+			"Deluxe Pit",
+			"Une Patate A Velo",
+			"Wig Out",
+			"Canada-Opoly",
+			"Monopoly",
+			"Clue",
+			"Fake News or Not",
+			"What Do You Meme",
+			"Throw Throw Burrito",
+			"Classic Games Set",
+			"Yahtzee",
+			"Dream Cakes",
+			"Break Dancing Meeples",
+			"Hungry Hungry Hippos",
+			"Bananas",
+			"Jenga",
+			"Scrabble",
+			"Scrabble Slam",
+			"Qwixx",
+			"Skip-bo",
+			"Telestrations",
+			"King of New York 2",
+			"Sixteen Samurai",
+			"Lanterns 2",
+			"Astro Trash",
+			"Marvel United",
+			"Camper Damper",
+			"Alhambra",
+			"Binding of Isaac: Four Souls",
+			"Boss Monster",
+			"Boss Monster: The Next Level",
+			"Evolution Climate",
+			"Galaxy Trucker",
+			"Lanterns",
+			"Red Rising",
+			"Steampunk Rally",
+			"Ticket To Ride: Europe",
+			"Unearth",
+			"Splendor",
+			"The Settlers of Catan",
+			"7 Wonders Duel",
+			"Betrayal at House on the Hill",
+			"Dominion & Intrigue: Big Box",
+			"Dominion: Empires",
+			"Dominion: Plunder",
+			"Dominion: Prosperity 2nd Edition",
+			"Dominion: Resistenance",
+			"Dominion: Seaside 2nd Edition",
+			"Hanabi",
+			"Pandemic",
+			"Monopoly The Card Game",
+			"Arkham Horror: A Call of Cathulu",
+			"Carcassonne Big Box",
+			"Clank!",
+			"Forbidden Desert",
+			"Lords of Waterdeep",
+			"Machi Koro",
+			"Smash Up",
+			"Krakow 1325",
+			"Root",
+			"Arabian Nights",
+			"Cosmic Encounter",
+			"Dead of Winter",
+			"Diplomacy",
+			"Eminent Domain",
+			"Executive Decision",
+			"Magic Maze",
+			"Twilight",
+			"Sheriff of Nottingham",
+			"Takenoko",
+			"King of New York",
+			"Council of Verona",
+			"Imperial Settlers",
+			"Isle of Skye",
+			"Kingdom Builder",
+			"Monster my Neighbor",
+			"Nuclear War",
+			"Puerto Rico",
+			"Skull King",
+			"Stone Age",
+			"The Castles of Burgundy",
+			"The Hobbit Board Game",
+			"Cthulhu Gloom",
+			"Dungeon Mayhem",
+			"The Real Truth",
+			"7 Wonders",
+			"Avalon",
+			"Camel Up",
+			"Captain Sonar",
+			"Cash N Guns",
+			"Codenames",
+			"Colt Express",
+			"Concept",
+			"Coup",
+			"Deception: Muder in Hong Kong",
+			"Donner Dinner Party",
+			"Fluxx",
+			"For Sale",
+			"Love Letter",
+			"Monty Python Fluxx",
+			"Munchkin",
+			"No Thanks",
+			"One Night Ultimate Werewolf",
+			"Skull",
+			"Spyfall",
+			"Sushi Go Party",
+			"The Resistance",
+			"Ultimate Werewolf",
+			"We didn't Playtest This At All",
+			"Cockroach Poker",
+			"Get Lucky",
+			"Anomia",
+			"Guillotine",
+			"Saboteur",
+			"Secret Hitler",
+			"Poetry for Neandrathal",
+			"Harry Potter: Hogwart's Battle Defense Against The Dark Arts",
+			"Cards Against Humanity",
+			"Jungle Speed",
+			"Jungle Speed Safari",
+			"Venn",
+			"Power Grid",
+			"Santorini",
+			"Bananagrams",
+			"Terraforming Mars the dice game",
+			"Tokaido",
+			"Viticulture",
+			"Dune Imperium",
+			"Caylus",
+			"Shadow Planet",
+			"Istanbul",
+			"Photosynthesis",
+			"Pandemic Contaigen",
+			"Kelp",
+			"Bloc by Bloc",
+			"The Vale of Eternity",
+			"Starwars Empire vs Rebellion",
+			"DnD the Adventure Begins",
+			"Poker Chips",
+			"Ubi",
+			"The God Father",
+			"Ubongo Extreme",
+			"You Are a Liar",
+			"Step By Step",
+			"Once Upon a Time",
+			"The Lord of the Rings the card game",
+			"Corporate America",
+			"Nocturion"
+		];
 
-			let spinStart = 0;			//Variables
-			let spinDuration = 5000;
-			let startRotation = 0;
-			let targetRotation = 0;;
-			let rotation = 0;
-			let isSpinning = false;
+		pickGames();
+		let GAMES = gamesMaster.slice(0, 12);		//Fill GAMES. Decides How many enteries GAMES has
 
-			drawWheel();
+		let spinStart = 0;			//Variables
+		let spinDuration = 5000;
+		let startRotation = 0;
+		let targetRotation = 0;;
+		let rotation = 0;
+		let isSpinning = false;
 
-			const spinButton = document.querySelector("#spinBtn");		//Button click handler
+		drawWheel();
 
-			spinButton.addEventListener("click", () => {
-			if (isSpinning) return;
+		const spinButton = document.querySelector("#spinBtn");
 
-			isSpinning = true;
-			startRotation = rotation;
+		spinButton.addEventListener("click", () => {
+		if (isSpinning) return;
 
-			// Always spin several full turns + random offset
-			targetRotation = rotation + Math.PI * 2 * (5 + Math.random() * 3);
-			requestAnimationFrame(spinLoop);
-			});
+		isSpinning = true;											//Spin button
+		startRotation = rotation;
 
-			const modal = document.querySelector("#modal");
+		// Always spin several full turns + random offset
+		targetRotation = rotation + Math.PI * 2 * (5 + Math.random() * 3);
+		requestAnimationFrame(spinLoop);
+		});
 
-			// Click outside the popup closes it
-			modal.addEventListener("click", () => {
-			modal.style.display = "none";
-			});
+		const modal = document.querySelector("#modal");				//Modal popup
 
-													//FUNCTIONS
-			function drawWheel() {
-			const canvas = document.querySelector("canvas");
-			const ctx = canvas.getContext("2d");
-			ctx.clearRect(0, 0, canvas.width, canvas.height);
+		// Click outside the popup closes it
+		modal.addEventListener("click", () => {
+		modal.style.display = "none";
+		});
 
-			const sliceAngle = (2*Math.PI)/GAMES.length;
-			const cenX = canvas.width/2;
-			const cenY = canvas.height/2;
-			const hubRadius = 35;					//Hub radius
-			const rad = 270;						//Wheel radius
+		const gameButton = document.querySelector("#newGamesBtn");
 
-			for(let i = 0; i < GAMES.length; i++) {
-			const startAngle = rotation + i * sliceAngle;
-			const endAngle = startAngle + sliceAngle;
+		newGamesBtn.addEventListener("click", () => {				//Refill GAMES on button click
+		if (isSpinning) return;
+		pickGames();
+		GAMES = gamesMaster.slice(0, 12);		//This has to be changd too if changing how many games is in GAMES
+		drawWheel();
+		});
+
+		//FUNCTIONS
+		function pickGames() {
+		for (let i = gamesMaster.length - 1; i > 0; i--) {
+		const j = Math.floor(Math.random() * (i + 1));
+		[gamesMaster[i], gamesMaster[j]] = [gamesMaster[j], gamesMaster[i]];
+		}
+		};
+
+		function drawWheel() {
+
+		const canvas = document.querySelector("canvas");
+		const ctx = canvas.getContext("2d");
+		ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+		const sliceAngle = (2*Math.PI)/GAMES.length;
+		const cenX = canvas.width/2;
+		const cenY = canvas.height/2;
+		const hubRadius = 35;					//Hub radius
+		const rad = 270;						//Wheel radius
+
+		for(let i = 0; i < GAMES.length; i++) {
+		const startAngle = rotation + i * sliceAngle;
+		const endAngle = startAngle + sliceAngle;
 
 
-			const wheelColours = ["#f56527", "#00a1ff", "#1af057"];	//Wheel colours
-			ctx.beginPath();
-			ctx.moveTo(cenX, cenY);
-			ctx.arc(cenX, cenY, rad, startAngle, endAngle);
-			ctx.fillStyle = wheelColours[i % wheelColours.length];
-			ctx.fill();
+		const wheelColours = ["#f56527", "#00a1ff", "#1af057"];	//Wheel colours
+		ctx.beginPath();
+		ctx.moveTo(cenX, cenY);
+		ctx.arc(cenX, cenY, rad, startAngle, endAngle);
+		ctx.fillStyle = wheelColours[i % wheelColours.length];
+		ctx.fill();
 
-			ctx.beginPath();
-			ctx.arc(cenX, cenY, hubRadius, 0, 2 * Math.PI);		//Spinner hub
-			ctx.fillStyle = "#ffffff";
-			ctx.fill();
+		ctx.beginPath();
+		ctx.arc(cenX, cenY, hubRadius, 0, 2 * Math.PI);		//Spinner hub
+		ctx.fillStyle = "#ffffff";
+		ctx.fill();
 
-			ctx.save();								//Wedge lables
-			ctx.translate(cenX, cenY);
-			ctx.rotate(startAngle + sliceAngle/2);
-			ctx.textAlign = "right";
-			ctx.fillStyle = "#000";
-			const maxFont = 18;						// Dynamic font size based on wedge size
-			const minFont = 8;
-			const fontSize = Math.max(minFont,Math.min(maxFont, sliceAngle * 180 / Math.PI * 0.6));
-			ctx.font = `${fontSize}px sans-serif`; // label font
-			const textRadius = hubRadius + (rad - hubRadius) * 0.95;
-			const maxTextWidth = sliceAngle * textRadius * 0.69;
-			const label = fitText(ctx, GAMES[i], maxTextWidth);
+		ctx.save();								//Wedge lables
+		ctx.translate(cenX, cenY);
+		ctx.rotate(startAngle + sliceAngle/2);
+		ctx.textAlign = "right";
+		ctx.fillStyle = "#000";
+		const maxFont = 18;						// Dynamic font size based on wedge size
+		const minFont = 8;
+		const fontSize = Math.max(minFont,Math.min(maxFont, sliceAngle * 180 / Math.PI * 0.6));
+		ctx.font = `${fontSize}px sans-serif`; // label font
+		const textRadius = hubRadius + (rad - hubRadius) * 0.9;		//Lower multiplier --> further from edge
+		const maxTextWidth = sliceAngle * textRadius * 1.5;			//Lower multiplier --> further from middle
+		const label = fitText(ctx, GAMES[i], maxTextWidth);
 
-			ctx.fillText(label, textRadius, 5);
-			ctx.restore();
-			};
+		ctx.fillText(label, textRadius, 5);
+		ctx.restore();
+		};
 
-			ctx.save();								//Pointer arrow for selected game
-			ctx.fillStyle = "red";					//Arrow colour
+		ctx.save();								//Pointer arrow for selected game
+		ctx.fillStyle = "red";					//Arrow colour
 
-			const tipX = cenX + rad;				//Tip placement (currently edge of wheel)
-			const tipY = cenY;
-			const baseWidth = 20;					//Base dimensions
-			const baseDepth = 20;
+		const tipX = cenX + rad;				//Tip placement (currently edge of wheel)
+		const tipY = cenY;
+		const baseWidth = 20;					//Base dimensions
+		const baseDepth = 20;
 
-			ctx.beginPath();						//Drawing arrow
-			ctx.moveTo(tipX, tipY);
-			ctx.lineTo(tipX + baseDepth, tipY - baseWidth/2);
-			ctx.lineTo(tipX + baseDepth, tipY + baseWidth/2);
-			ctx.closePath();
-			ctx.fill();
-			ctx.restore();
-			};
+		ctx.beginPath();						//Drawing arrow
+		ctx.moveTo(tipX, tipY);
+		ctx.lineTo(tipX + baseDepth, tipY - baseWidth/2);
+		ctx.lineTo(tipX + baseDepth, tipY + baseWidth/2);
+		ctx.closePath();
+		ctx.fill();
+		ctx.restore();
+		};
 
-			function spinLoop(timestamp) {
-			if (!spinStart) spinStart = timestamp;
+		function spinLoop(timestamp) {
+		if (!spinStart) spinStart = timestamp;
 
-			const elapsed = timestamp - spinStart;
-			const progress = Math.min(elapsed / spinDuration, 1);
+		const elapsed = timestamp - spinStart;
+		const progress = Math.min(elapsed / spinDuration, 1);
 
-			// Ease-out cubic
-			const ease = 1 - Math.pow(1 - progress, 3);
+		// Ease-out cubic
+		const ease = 1 - Math.pow(1 - progress, 3);
 
-			rotation = startRotation + ease * (targetRotation - startRotation);
-			drawWheel();
+		rotation = startRotation + ease * (targetRotation - startRotation);
+		drawWheel();
 
-			if (progress < 1) {
-			requestAnimationFrame(spinLoop);
-			} else {
-			spinStart = 0;
-			isSpinning = false;
+		if (progress < 1) {
+		requestAnimationFrame(spinLoop);
+		} else {
+		spinStart = 0;
+		isSpinning = false;
 
-			const selectedIndex = getWinningGame();
-			const modal = document.querySelector("#modal");
-			document.querySelector("#modalText").textContent =
-			"The wheel has spoken, you shall play: " + GAMES[selectedIndex];
-			modal.style.display = "block";
-			}
-			}
+		const selectedIndex = getWinningGame();
+		const modal = document.querySelector("#modal");
+		document.querySelector("#modalText").textContent =
+		"The wheel has spoken, you shall play: " + GAMES[selectedIndex];
+		modal.style.display = "block";
+		}
+		}
 
-			function getWinningGame() {
-			const sliceAngle = (2 * Math.PI) / GAMES.length;
+		function getWinningGame() {
+		const sliceAngle = (2 * Math.PI) / GAMES.length;
 
-			let normRotation = rotation % (2 * Math.PI);
-			if (normRotation < 0) normRotation += 2 * Math.PI;
+		let normRotation = rotation % (2 * Math.PI);
+		if (normRotation < 0) normRotation += 2 * Math.PI;
 
-			const index = Math.floor (((2 * Math.PI) - normRotation) / sliceAngle) % GAMES.length;
+		const index = Math.floor (((2 * Math.PI) - normRotation) / sliceAngle) % GAMES.length;
 
-			return index;
-			};
+		return index;
+		};
 
-			function fitText(ctx, text, maxWidth) {
-			if (ctx.measureText(text).width <= maxWidth) return text;
+		function fitText(ctx, text, maxWidth) {
+		if (ctx.measureText(text).width <= maxWidth) return text;
 
-			const ellipsis = "...";
-			let truncated = text;
+		const ellipsis = "...";
+		let truncated = text;
 
-			while (truncated.length > 0 &&
-			ctx.measureText(truncated + ellipsis).width > maxWidth) {
-			truncated = truncated.slice(0, -1);
-			}
+		while (truncated.length > 0 &&
+		ctx.measureText(truncated + ellipsis).width > maxWidth) {
+		truncated = truncated.slice(0, -1);
+		}
 
-    return truncated + ellipsis;
-}
+		return truncated + ellipsis;
+		}
 
-		</script>
-	</body>
-	</html>
-
-<!--To add: three colours if odd number of games. OR one set of colours that work with all numbers-->
+	</script>
+</body>
+</html>
